Alignment issue fix

--- a/src/Home.css
+++ b/src/Home.css
@@ -62,7 +62,7 @@ nav ul li a {
 }
 
 main {
-  padding: 40px 140px;
+  padding: 40px 100px;
 }
 
 header,
@@ -287,8 +287,6 @@ footer ul li {
   font-size: 30px;
 } */
 
-
-
 @media only screen and (max-width: 768px) {
   .container {
     max-width: 768px;
@@ -299,11 +297,11 @@ footer ul li {
   }
 
   nav {
-  display: flex;
-  justify-content: left;
-  padding: 10px;
+    display: flex;
+    justify-content: left;
+    padding: 10px;
   }
-  
+
   nav ul li {
     display: inline;
   }
@@ -321,7 +319,7 @@ footer ul li {
   }
 
   main {
-    padding: 20px;
+    padding: 40px 100px;
   }
 
   .rent-meta {
@@ -332,7 +330,7 @@ footer ul li {
   header,
   .logo,
   nav {
-    padding: 20px;
+    padding: 40px;
   }
 
   header h1 {
@@ -375,7 +373,7 @@ footer ul li {
   }
 
   .nft-img {
-   max-width: 300px;
+    max-width: 300px;
   }
 
   .wallets {
@@ -431,13 +429,12 @@ footer ul li {
   }
 
   main {
-    padding: 20px;
+    padding: 20px 60px;
   }
-
   header,
   .logo,
   nav {
-    padding: 20px;
+    padding: 40px 80px;
   }
 
   header h1 {
